--- a/Philosophers/philo/Makefile
+++ b/Philosophers/philo/Makefile
@@ -6,13 +6,13 @@
 #    By: seocha <seocha@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/03/01 15:57:33 by seocha            #+#    #+#              #
-#    Updated: 2023/04/08 21:08:02 by seocha           ###   ########.fr        #
+#    Updated: 2023/06/20 17:20:50 by seocha           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 
 CC = cc
-CFLAGS = -Wall -Wextra -Werror
+CFLAGS = -Wall -Wextra -Werror -fsanitize=thread
 
 NAME = philo
 
